--- a/templates/about.page.tmpl.html
+++ b/templates/about.page.tmpl.html
@@ -1,19 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+{{template "base" .}}
+{{define "content"}}
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1>This is the about page</h1>
 
-</head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <h1>This is the about page</h1>
-
+            </div>
         </div>
     </div>
-</div>
-</body>
-</html>
+{{end}}
