Demonstrated sessions module by logging IP addresses

--- a/templates/about.page.tmpl.html
+++ b/templates/about.page.tmpl.html
@@ -7,6 +7,11 @@
                     <p>This is a paragraph of text</p>
                     <p>This is a paragraph of text</p>
                     <p>This came from the template: {{index .StringMap "test"}}</p>
+                <p>{{if ne (index .StringMap "remote_ip") ""}}</p>
+                Your remote IP address is {{index .StringMap "remote_ip"}}
+                {{else}}
+                I don't know your IP address. Visit the <a href="/">Home Page</a> so I can set it
+                {{end}}
             </div>
         </div>
     </div>
